Refactor sign port handling logic and improve logging
Refactor handling of sign port clicks and reloading logic for better readability and maintainability. Migrate storage from YAML to JSON for enhanced data handling, and add comprehensive logging for better debugging and monitoring.